compilerGUI/ErrorLog.txt
Compile.java:12: error: ';' expected
            System.out.println("Waiting for compiler...") //Fixed
                                                         ^
Compile.java:23: error: ')' expected
        while(String i:data){ //Replaced 'while' with 'for'
                    ^
Compile.java:23: error: not a statement
        while(String i:data){ //fixed
                       ^
Compile.java:23: error: ';' expected
        while(String i:data){ //fixed
                           ^
ErrorDialog.java:17: error: ')' expected
        }; //Fixed
         ^
Main.java:22: error: ';' expected
        comp = new JButton("Compile")//,compileImage); //Fixed
                                     ^
6 errors
~/CompileingCodeForAThing/compilerGUI$ javac *.java -Xdiags:verbose

ButtonListener.java:7: error: no interface expected here
public class ButtonListener extends ActionListener{
                                    ^
ErrorDialog.java:22: error: cannot find symbol
    public void setErrorText(ArrayList<String> t){
                             ^
  symbol:   class ArrayList
  location: class ErrorDialog
Main.java:9: error: cannot find symbol
    private ErrorBox errorbox;
            ^
  symbol:   class ErrorBox
  location: class Main
ButtonListener.java:17: error: method does not override or implement a method from a supertype
    @Override
    ^
ButtonListener.java:19: error: cannot find symbol
        ArrayList<String> out = compile.build(src.getText(),dest.getText());
        ^
  symbol:   class ArrayList
  location: class ButtonListener
Compile.java:15: error: no suitable constructor found for Scanner(OutputStream)
        Scanner s = new Scanner(p.getOutputStream());
                    ^
    constructor Scanner.Scanner(Readable,Pattern) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(Readable) is not applicable
      (argument mismatch; OutputStream cannot be converted to Readable)
    constructor Scanner.Scanner(InputStream) is not applicable
      (argument mismatch; OutputStream cannot be converted to InputStream)
    constructor Scanner.Scanner(InputStream,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(InputStream,Charset) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(File) is not applicable
      (argument mismatch; OutputStream cannot be converted to File)
    constructor Scanner.Scanner(File,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(File,Charset) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(File,CharsetDecoder) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(Path) is not applicable
      (argument mismatch; OutputStream cannot be converted to Path)
    constructor Scanner.Scanner(Path,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(Path,Charset) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(String) is not applicable
      (argument mismatch; OutputStream cannot be converted to String)
    constructor Scanner.Scanner(ReadableByteChannel) is not applicable
      (argument mismatch; OutputStream cannot be converted to ReadableByteChannel)
    constructor Scanner.Scanner(ReadableByteChannel,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(ReadableByteChannel,Charset) is not applicable
      (actual and formal argument lists differ in length)
Compile.java:36: error: cannot find symbol
            Process p1 = new ProcessBuilder("xcopy "+source.getAbsolutePath()+" "+output.getbsolutePath()+" /s /e /y").start();
                                                                                        ^
  symbol:   method getbsolutePath()
  location: variable output of type File
Compile.java:38: error: no suitable method found for directory(String)
            Process p2 = new ProcessBuilder("javac *.java").directory(output.getAbsolutePath()).start();
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:40: error: no suitable method found for directory(String)
            Process p3 = new ProcessBuilder("del /s *.java").directory(output.getAbsolutePath()).start();
                                                            ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:43: error: cannot find symbol
            Process p1 = new ProcessBuilder("cp -r "+source.getAbsoluteDirectory()+" "+output.getAbsolutePath()).start();
                                                           ^
  symbol:   method getAbsoluteDirectory()
  location: variable source of type File
Compile.java:45: error: no suitable method found for directory(String)
            Process p2 = new ProcessBuilder("javac *.java").directory(output.getAbsolutePath()).start();
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:47: error: no suitable method found for directory(String)
            Process p3 = new ProcessBuilder("rm -r *.java").directory(output.getAbsolutePath()).start();
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:51: error: cannot find symbol
        Scanner s = new Scanner(p2.getOutputStream());
                                ^
  symbol:   variable p2
  location: class Compile
ErrorDialog.java:12: error: cannot find symbol
        close.addActionListener(new ActionListener(){
                                    ^
  symbol:   class ActionListener
  location: class ErrorDialog
ErrorDialog.java:14: error: cannot find symbol
            public void actionPerformed(ActionEvent e){
                                        ^
  symbol: class ActionEvent
ErrorDialog.java:13: error: method does not override or implement a method from a supertype
            @Override
            ^
ErrorDialog.java:18: error: cannot find symbol
        setLayout(new FLowLayout());
                      ^
  symbol:   class FLowLayout
  location: class ErrorDialog
Main.java:7: error: Main is not abstract and does not override abstract method actionPerformed(ActionEvent) in ActionListener
public class Main extends JFrame implements ActionListener{
       ^
Main.java:17: error: cannot find symbol
        buttonPanel = new JPanel();
        ^
  symbol:   variable buttonPanel
  location: class Main
Main.java:20: error: cannot find symbol
        dest = new JTextFeild("Build path");
                   ^
  symbol:   class JTextFeild
  location: class Main
Main.java:23: error: method addActionListener in class AbstractButton cannot be applied to given types;
        comp.addActionListener(new ButtonListener(src,dest,compile,dialog));
            ^
  required: ActionListener
  found: ButtonListener
  reason: argument mismatch; ButtonListener cannot be converted to ActionListener
Main.java:24: error: cannot find symbol
        buttonPanel.add(comp);
        ^
  symbol:   variable buttonPanel
  location: class Main
Main.java:26: error: cannot find symbol
        add(buttonPanel);
            ^
  symbol:   variable buttonPanel
  location: class Main
23 errors
~/CompileingCodeForAThing/compilerGUI$ 
